<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">Test_ST245_Music_Cat_Funny</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">\u00A0Setting\u00A0</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">Next</string>
    <string name="language">Language</string>

    <string name="title_1">Let\'s party hard, guys!</string>
    <string name="title_2">Why not jump in? \nCome and have some fun!</string>
    <string name="title_3">Choose your instrument and \nlet the party begin!</string>
    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">Let us know your experience</string>

    <string name="one_star_title">Oh, no!</string>
    <string name="one_star">Please give us some feedback</string>

    <string name="two_star_title">Oh, no!</string>
    <string name="two_star">Please give us some feedback</string>

    <string name="three_star_title">Oh, no!</string>
    <string name="three_star">Please give us some feedback</string>

    <string name="four_star_title">We love you too!</string>
    <string name="four_star">Thanks for your feedback</string>

    <string name="five_star_title">We love you too!</string>
    <string name="five_star">Thanks for your feedback</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="wait_a_minute">Wait a few second...</string>
    <string name="reset">Reset</string>
    <string name="download_success">Download successful to the Character Maker album</string>
    <string name="please_check_your_internet">Please check your internet</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">An error occurred, please try again later.</string>
    <string name="image_has_been_saved_successfully">Image has been saved successfully!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="nickname_already_exists">This nickname already exists</string>
    <string name="name_already_exists">This name already exists</string>
    <string name="are_you_sure_want_to_delete_this_item">Do you want to delete this nickname?</string>
    <string name="downloading">Downloading...</string>
    <string name="successfully">Successfully</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="save_failed_please_try_again">Save failed, please try again!</string>
    <string name="delete_failed_please_try_again">Delete failed, please try again!</string>
    <string name="my_creation">My Creation</string>
    <string name="delete_your_customize">Delete your customize</string>
    <string name="are_you_sure_you_want_to_delete_the_image">Are you sure you want to delete the image?</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">Haven’t saved it yet, do you want to exit?</string>
    <string name="change_your_whole_design_are_you_sure">Do you want to reset all?</string>
    <string name="character_maker">Character Maker</string>
    <string name="no_item_here">No Item Here</string>
    <string name="my_name">My name</string>
    <string name="random_name">Random Name</string>
    <string name="My_NickName">My Nickname</string>
    <string name="edit_name">Edit name</string>
    <string name="update">Update</string>
    <string name="custome_nickname">Custome nickname</string>
    <string name="generate">Generate</string>
    <string name="input_name">Input name</string>
    <string name="successful">Successful</string>
    <string name="home">Home</string>
    <string name="my_nickname">My nickname</string>
    <string name="no_item_is_here">No item is here</string>
    <string name="please_input_your_name">Please input your name</string>
    <string name="nickname">Nickname</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="saved">Saved: %1$s</string>
    <string name="copied_message">"Copied "</string>
    <string name="please_enter_a_nickname">Please enter a nickname</string>
    <string name="nickname_updated">Nickname updated</string>
    <string name="deleted">Deleted: %1$s</string>
    <string name="top">Top</string>
    <string name="girl">Girl</string>
    <string name="animals">Animals</string>
    <string name="loved">Loved</string>
    <string name="cool">Cool</string>
    <string name="cute">Cute</string>
    <string name="film">Film</string>
    <string name="unique">Unique</string>
    <string name="boy">Boy</string>
    <string name="food">Food</string>
    <string name="music">Music</string>
    <string name="game">Game</string>
    <string name="left_symbol">Left Symbol</string>
    <string name="unicode_styles">Styles text</string>
    <string name="right_symbol">Right Symbol</string>
    <string name="name_updated">Name updated</string>
    <string name="name_restored_to_original">Name restored to original</string>
    <string name="your_name_has_been_saved_to_my_nickname">Your name has been saved to my nickname</string>
    <string name="length">Length:</string>
    <string name="ok">OK</string>
    <string name="stop">Stop</string>
    <string name="choose_sound">Choose sound</string>
    <string name="play">LET\'S PLAY!</string>
    <string name="recording_saved">Saved: %1$s</string>
    <string name="recording_discarded">Recording discarded</string>
    <string name="my_record">SECRET MELODY</string>
    <string name="record">Record</string>
    <string name="my_record_title">My record</string>
    <string name="success_title">Amazing, you played this song very well !</string>
    <string name="play_again">Play again</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="name_the_recording">Name the recording</string>
    <string name="enter_recording_name">Enter recording name</string>
    <string name="the_recording_was_not_saved">The recording was not saved!</string>
    <string name="cannot_switch_instrument_while_recording">Cannot switch instrument while recording!</string>
    <string name="no_record_here">No record here</string>
    <string name="name_of_song">Name of song</string>
    <string name="character">Character</string>
    <string name="background">Background</string>
    <string name="instrument">Instrument</string>
    <string name="use">Use</string>
    <string name="used">Used</string>
    <string name="unlock">Unlock</string>
    <string name="watch_video_to_unlock_this_item">Watch video to unlock this item?</string>
    <string name="unlock_all">Unlock All</string>
    <string name="no_skin">No Skin</string>
    <string name="guide_play">1121-43 1121-43 1186-432 7764-54</string>
    <string name="play_secret">PLAY</string>
    <string name="unlock_item_s">UNLOCK</string>
    <string name="unlock_item_secret">UNLOCK</string>
</resources>