<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"

    tools:context=".activity_app.main.MainActivity">

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg_app" />


    <ImageView
        android:id="@+id/btnActionBarRight1"
        android:layout_width="58dp"
        android:layout_height="72dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/ic_settings"
        android:visibility="visible"
        android:layout_marginTop="60dp"
        android:clipChildren="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <!--            btnActionBarRightText-->
    <FrameLayout
        android:id="@+id/btnActionBarRightText"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:visibility="visible"
        android:clipToPadding="false"
        android:clipToOutline="false"
        android:layout_marginTop="60dp"
        android:clipChildren="false"
        app:layout_constraintEnd_toEndOf="@id/btnActionBarRight1"
        app:layout_constraintStart_toStartOf="@id/btnActionBarRight1"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.cat.catpiano.music.core.custom.text.DoubleStrokeTextView
            android:id="@+id/tvRightText"
            style="@style/single_marquee"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:fontFamily="@font/cherrybombone_regular"
            android:gravity="center"
            android:text="@string/settings"
            app:outerStrokeColor="#000000"
            android:layout_marginBottom="10dp"
            app:outerStrokeWidth="2dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>


    <!-- Title Image - Centered -->
    <ImageView
        android:id="@+id/titleHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_app_name"
        app:layout_constraintDimensionRatio="312:40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnActionBarRightText"
        />

    <!-- Frame Home -->
    <ImageView
        android:id="@+id/frameHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleHome" />

    <!-- Button My Creation (Top - Full Width) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnPlayHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="0dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        app:layout_constraintDimensionRatio="296:144"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/frameHome">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_home_1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.cat.catpiano.music.core.custom.text.StrokeGradientTextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clipToOutline="false"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/cherrybombone_regular"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingHorizontal="12dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/white"
            android:text="@string/play"
            android:paddingVertical="8dp"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_item_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
  />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glLeft1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Button My Creation (Top - Full Width) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnSecret"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:clipToOutline="false"
        android:elevation="4dp"
        app:layout_constraintDimensionRatio="296:144"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlayHome"
        app:strokeColor="@color/transparent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_home_2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.cat.catpiano.music.core.custom.text.StrokeGradientTextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/sigmar_regular"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/my_record"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:fontFamily="@font/cherrybombone_regular"
            android:paddingHorizontal="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_item_home"
      />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glLeft2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    flNativeCollab-->
    <FrameLayout
        android:id="@+id/flNativeCollab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>