<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_app">


    <TextView
        android:id="@+id/btnBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/btnBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintDimensionRatio="360:288"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <ImageView
        android:id="@+id/btnCharacter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_default"
        app:layout_constraintDimensionRatio="360:288"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bgFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_frame_song"
        app:layout_constraintDimensionRatio="312:84"
        app:layout_constraintTop_toBottomOf="@id/btnCharacter">

        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cherrybombone_regular"
            android:gravity="center"
            android:text="@string/name_of_song"
            android:textColor="#363940"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.temm.core.custom.text.DoubleStrokeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:outerStrokeColor="#000000"
            app:outerStrokeWidth="1dp"
            android:fontFamily="@font/cherrybombone_regular"
            android:text="@string/guide_play"
            android:textSize="16sp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/songName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:id="@+id/tvDescription"
            />



        <ImageView
            android:layout_width="21dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btnPrevious"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="21dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:rotation="180"
            android:id="@+id/btnNext"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/bgFrame"
        android:id="@+id/notes8"
        >

        <ImageView
            android:id="@+id/btn1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/btn1"
            app:layout_constraintEnd_toStartOf="@id/btn2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/btn2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/btn2"
            app:layout_constraintEnd_toStartOf="@id/btn3"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/btn3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/btn3"
            app:layout_constraintEnd_toStartOf="@id/btn4"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/btn4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn3"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/btn5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/btn5"
            app:layout_constraintEnd_toStartOf="@id/btn6"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

        <ImageView
            android:id="@+id/btn6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/btn6"
            app:layout_constraintEnd_toStartOf="@id/btn7"
            app:layout_constraintStart_toEndOf="@id/btn5"
            app:layout_constraintTop_toBottomOf="@id/btn1"

            />

        <ImageView
            android:id="@+id/btn7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/btn7"
            app:layout_constraintEnd_toStartOf="@id/btn8"
            app:layout_constraintStart_toEndOf="@id/btn6"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

        <ImageView
            android:id="@+id/btn8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/btn8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn7"
            app:layout_constraintTop_toBottomOf="@id/btn1"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/bgFrame"
        android:id="@+id/notes2"
        >


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintEnd_toStartOf="@id/btnRight"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/bg_foot"
            android:id="@+id/btnLeft"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"

            app:layout_constraintStart_toEndOf="@id/btnLeft"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/bg_foot"
            android:id="@+id/btnRight"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ic_background_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnCharacterFgagment"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btnBackgroundFragment"
        >

        <com.temm.core.custom.text.DoubleStrokeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherrybombone_regular"
            android:text="@string/background"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:outerStrokeColor="#000000"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            app:outerStrokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toStartOf="@id/btnInstrumentFragment"
        android:background="@drawable/ic_character_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@id/btnBackgroundFragment"
        android:id="@+id/btnCharacterFgagment"
        >

        <com.temm.core.custom.text.DoubleStrokeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherrybombone_regular"
            android:text="@string/character"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:outerStrokeColor="#000000"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            app:outerStrokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ic_instrument"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCharacterFgagment"
        android:id="@+id/btnInstrumentFragment"

        >

        <com.temm.core.custom.text.DoubleStrokeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherrybombone_regular"
            android:text="@string/instrument"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:outerStrokeColor="#000000"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            app:outerStrokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Character panel: visible from bottom of btnCharacter to bottom of parent -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panelCharacter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnCharacter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCharacterPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Instrument panel: visible from bottom of btnCharacter to bottom of parent -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panelInstrument"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnCharacter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvInstrumentPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Background panel: visible from bottom of btnCharacter to bottom of parent -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panelBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnCharacter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvBackgroundPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/noteOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:clickable="false"
        android:focusable="false" />

</androidx.constraintlayout.widget.ConstraintLayout>